@@ -162,8 +162,10 @@ fn test_real_mode() {
     test_display(&[0x0f, 0x01, 0xfb], "mwaitx");
     test_display(&[0x0f, 0x01, 0xfc], "clzero");
     test_display(&[0x0f, 0x01, 0xfd], "rdpru ecx");
-    test_display(&[0x0f, 0x02, 0xc0], "lar ax, ax");
-    test_display(&[0x0f, 0x03, 0xc0], "lsl ax, ax");
+    test_display(&[0x0f, 0x02, 0x01], "lar ax, word [bx + di * 1]");
+    test_display(&[0x0f, 0x02, 0xc1], "lar ax, cx");
+    test_display(&[0x0f, 0x03, 0x01], "lsl ax, word [bx + di * 1]");
+    test_display(&[0x0f, 0x03, 0xc1], "lsl ax, cx");
     test_display(&[0x0f, 0x05], "syscall");
     test_display(&[0x0f, 0x06], "clts");
     test_display(&[0x0f, 0x07], "sysret");
@@ -16715,6 +16717,10 @@ fn test_real_mode() {
     test_display(&[0x65, 0x89, 0x04], "mov word gs:[si], ax");
     test_display(&[0x65, 0xf0, 0x87, 0x0f], "lock xchg word gs:[bx], cx");
     test_display(&[0x66, 0x0f, 0x01, 0xd8], "vmrun ax");
+    test_display(&[0x66, 0x0f, 0x02, 0x01], "lar eax, word [bx + di * 1]");
+    test_display(&[0x66, 0x0f, 0x02, 0xc1], "lar eax, ecx");
+    test_display(&[0x66, 0x0f, 0x03, 0x01], "lsl eax, word [bx + di * 1]");
+    test_display(&[0x66, 0x0f, 0x03, 0xc1], "lsl eax, ecx");
     test_display(&[0x66, 0x0f, 0x05], "syscall");
     test_display(&[0x66, 0x0f, 0x0f, 0xc6, 0xb7], "pmulhrw mm0, mm6");
     test_display(&[0x66, 0x0f, 0x10, 0xc0], "movupd xmm0, xmm0");
